# gst-zeromq

./: .gitignore  CMakeLists.txt  cmake_config.h.in  meson.build
src/zeromq/: gstzmqsrc.c
